fix vertical align quiz

--- a/lessons/L5/problem-set/05-fun-with-vertical-align/css/original.css
+++ b/lessons/L5/problem-set/05-fun-with-vertical-align/css/original.css
@@ -1,24 +1,27 @@
-body {
-    margin: 8px;
-}
-html {
-    font-size: 16px;
-    line-height: normal;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+html, body {
+	font-size: 16px;
+	line-height: normal;
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 img {
-    vertical-align: baseline;
+	vertical-align: baseline;
+}
+p {
+	margin: 1em 0;
+}
+.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
+	line-height: 1.42857143;
 }
 .container {
-    font-size: 14px;
-    line-height: 1.42857143;
-    color: #333;
-    background-color: #fff;
-    margin: 0 auto;
-    padding: 0;
+	font-size: 14px;
+	line-height: 1.42857143;
+	color: #333;
+	background-color: #fff;
+	margin: 0 auto;
+	padding: 0;
 }
 .panel-title {
-    font-weight: bold; 
+	font-weight: bold; 
 }
 .exponent {
 	vertical-align: super;
@@ -41,11 +44,11 @@ img {
 }
 @media (min-width: 800px) {
   .container {
-    max-width: 800px;
+	max-width: 800px;
   }
 }
 @media (max-width: 800px) {
   .container {
-    max-width: 100%;
+	max-width: 100%;
   }
 }
