--- a/lessons/L5/problem-set/05-fun-with-vertical-align/css/styles.css
+++ b/lessons/L5/problem-set/05-fun-with-vertical-align/css/styles.css
@@ -1,6 +1,3 @@
-body {
-    margin: 8px;
-}
 html, body {
     font-size: 16px;
     line-height: normal;
@@ -8,6 +5,12 @@ html, body {
 }
 img {
     vertical-align: baseline;
+}
+p {
+    margin: 1em 0;
+}
+.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
+    line-height: 1.42857143;
 }
 .container {
     font-size: 14px;
